2013-04-29
 * user variable permissions

2013-04-24
 * user permissions

2013-03-29
 * moved XMLRPC++ headers to include directory

2013-03-26
 * moved target and observation request to JSON library

2013-03-21
 * migrated JSON DB API to jsondb

2013-03-04
 * rts2_status_t for device status

2013-02-28
 * initDB with connection name parameter, allowning multiple connection for multi-thread applications

2013-02-26
 * added bb_observatory_id to plan table

2013-02-25
 * introduced messages types - currently only for observation slew/start/end/interruptions

2013-02-23
 * HARD_OFF/SOFT_OFF states becomes part of ONOFF_MASK, not direct status

2013-02-14
 * added support for GCUSB-nStep focuser

2013-01-13
 * fixed various bugs in simulator

2013-01-20
 * test_restart command for XMLRPCd
 * queues_targets table

2013-01-17
 * moved notify connection from target to MasterConstraints

2013-01-15
 * queue window parameter

2013-01-03
 * switched_standby centrald value

2012-12-28
 * JSONRequest class

2012-12-27
 * hide/show milliseconds in time differences

2012-12-20
 * replacing wrong characters in FITS header

2012-11-29
 * timeseries (trending)

2012-11-28
 * moved model and telescope drivers to rts2tel library

2012-11-24
 * tar_telescope_mode
 * clients visible in rts2-mon

2012-11-19
 * ThorLabs FW102c driver updates, ConnThorLabs

2012-11-14
 * insert command for selector/queues
 * image mode calculation

2012-11-13
 * block until visible queue option
 * target_constraints_with_name

2012-11-09
 * camera serial and type are writable and autosaved
 * moved GPIB to connection (from sensord)

2012-11-09
 * support for HISTORY and COMMENTS fields

2012-10-26
 * bb server with mapping and observations calls

2012-10-22
 * Changed telescope driver to display "model" DEC (-180..180 range)

2012-10-16
 * images are by default created only in memory, written to disk when saving them

2012-09-10
 * added BB (Big Brother)